--- a/PPWeb/todo.txt
+++ b/PPWeb/todo.txt
@@ -1,6 +1,9 @@
 http://tarnished-sanity.tumblr.com/post/59659657739/pokemon-fusion-art-mega-compilation-enjoy
 		
-1. Add garden with ability to Scavenge for food/pick fruit???
-2. Action buttons feel a little effete...
-	-Animations for different buttons?
-	-Open up notification showing the animation, can be manually exited or will close automatically at end of animation...??
+1. 5 consecutive pets = happy animation (++happiness and ++experience)
+	-5 consecutive happy anis = irritated animation (----happiness and ++experience)
+2. Text box appears under happiness and exp after pet hatches, allowing you to talk to it and based on keywords or not will pick a random response in it's descriptions.
+3. Get new egg after first egg reaches adulthood.
+	-Breed pets?
+	-Chimerize Pets?
+4. Add codex
